--- a/app/src/main/res/layout/activity_home_new.xml
+++ b/app/src/main/res/layout/activity_home_new.xml
@@ -1,47 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
+    <com.github.kwasow.bottomnavigationcircles.BottomNavigationCircles
+        android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/half_action_bar"
-
-
-        />
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/nas_red"
-        app:contentInsetStart="0dp"
-        app:fabCradleRoundedCornerRadius="10dp"
-        app:fabCradleVerticalOffset="10dp">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background_app_bar"
-            app:menu="@menu/menu_bottom_navigation" />
-
-    </com.google.android.material.bottomappbar.BottomAppBar>
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fabScan"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:backgroundTint="@color/zaimus_purple_light"-->
-<!--        android:contentDescription="@string/app_name"-->
-<!--        android:src="@drawable/round_qr_code_scanner_white_24dp"-->
-<!--        app:borderWidth="0dp"-->
-<!--        app:layout_anchor="@id/bottomAppBar"-->
-<!--        app:tint="@color/white" />-->
-
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="center|bottom"
+        android:background="@null"
+        app:backgroundShape="roundedRectangle"
+        app:backgroundTint="@color/white"
+        app:circleColor="@color/nas_red"
+        app:darkIcon="false"
+        app:itemIconTint="@drawable/bottom_navigation_selector"
+        app:labelVisibilityMode="auto"
+        app:menu="@menu/menu_bottom_navigation" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
