--- a/app/src/main/res/layout/dialog_alert.xml
+++ b/app/src/main/res/layout/dialog_alert.xml
@@ -98,6 +98,7 @@
             <Button
                 android:id="@+id/okButton"
                 android:text="@string/text_ok"
+                android:visibility="gone"
                 android:textColor="@color/nas_red"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
