--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
 
     <style name="Theme.NASHealthAndSafety" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -28,7 +28,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/nas_red</item>
         <item name="colorPrimaryVariant">@color/green</item>
-        <item name="colorOnPrimary">@color/purple_200</item>
+        <item name="colorOnPrimary">@color/nas_red</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
