--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -463,8 +463,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/evacuateButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp">
-            </com.ncorti.slidetoact.SlideToActView>
+                android:layout_marginBottom="16dp"></com.ncorti.slidetoact.SlideToActView>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fireMarshallButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:layout_constraintBottom_toTopOf="@+id/guideline8"
+                app:layout_constraintEnd_toStartOf="@+id/guideline6"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/star" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <androidx.cardview.widget.CardView
