Marshal page changes

--- a/app/src/main/res/layout/activity_fire_marshall_home.xml
+++ b/app/src/main/res/layout/activity_fire_marshall_home.xml
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16sp"
-        android:text="Staff Name"
+        android:text="Fire Marshal"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/greeting" />
@@ -93,14 +93,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16sp"
         android:background="@drawable/dotted_rectangle_black"
         app:layout_constraintBottom_toTopOf="@+id/cardview2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/evacuateButton">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -209,7 +209,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="TextView"
+                        android:text="Guy Matthew"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/studentID"
                         app:layout_constraintEnd_toStartOf="@+id/presentOrAbsent"
@@ -222,7 +222,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLength="12"
-                        android:text="TextView"
+                        android:text="5A"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/shape_layout"
@@ -350,7 +350,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="TextView"
+                        android:text="Susan Epicell"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toTopOf="@+id/studentID1"
                         app:layout_constraintEnd_toStartOf="@+id/presentOrAbsent1"
@@ -363,7 +363,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLength="12"
-                        android:text="TextView"
+                        android:text="6B"
                         android:textSize="14sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/shape_layout1"
@@ -502,6 +502,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.7" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/nas_red"
+        android:text="Reports"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
+        app:layout_constraintTop_toBottomOf="@+id/evacuateButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
