--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -310,7 +310,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="24dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:background="@drawable/rounded_rectangle_white"
                 app:layout_constraintStart_toStartOf="@+id/guideline7"
                 app:layout_constraintEnd_toEndOf="@id/guideline6"
