--- a/app/src/main/res/layout/student_evacuation_adapter.xml
+++ b/app/src/main/res/layout/student_evacuation_adapter.xml
@@ -67,6 +67,7 @@
                     <ImageView
                         android:id="@+id/studentImage"
                         android:layout_width="match_parent"
+                        android:src="@drawable/blankavatar"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop" />
                 </androidx.cardview.widget.CardView>
