--- a/app/src/main/res/layout/activity_fire_marshall_home.xml
+++ b/app/src/main/res/layout/activity_fire_marshall_home.xml
@@ -219,14 +219,14 @@
         android:id="@+id/guideline18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.7" />
+        android:orientation="vertical" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:visibility="gone"
         android:backgroundTint="@color/nas_red"
         android:text="Reports"
         app:layout_constraintEnd_toEndOf="parent"
