--- a/app/src/main/res/layout/activity_student_evacuation.xml
+++ b/app/src/main/res/layout/activity_student_evacuation.xml
@@ -165,6 +165,7 @@
                 android:layout_height="wrap_content"
                 android:text="English"
                 android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/textView27"
                 app:layout_constraintStart_toStartOf="@+id/textView27"
                 app:layout_constraintTop_toBottomOf="@+id/textView27" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -208,7 +209,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:text="Not Found"
+            android:text="All School"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
